<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context="djs.com.mirror.ui.MainActivity">

    <FrameLayout
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/linear_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_marginStart="-7dp"
                android:layout_marginTop="-20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="top|start"
                    android:text="@string/time_content"
                    android:textColor="#FFFFFF"
                    android:textSize="150sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/Seconds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="10dp"
                    android:gravity="top|start"
                    android:text="@string/seconds_content"
                    android:textColor="#FFFFFF"
                    android:textSize="75sp"
                    android:textStyle="normal" />

                <!--<FrameLayout-->
                    <!--android:id="@+id/ballanimcontainer"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="match_parent">-->

                    <!--<ImageView-->
                        <!--android:id="@+id/Tail"-->
                        <!--android:layout_width="16dp"-->
                        <!--android:layout_height="32dp"-->
                        <!--android:contentDescription="@string/ballAnim"-->
                        <!--android:src="@drawable/tail" />-->

                    <!--<ImageView-->
                        <!--android:id="@+id/Ball"-->
                        <!--android:layout_width="16dp"-->
                        <!--android:layout_height="16dp"-->
                        <!--android:layout_gravity="top|end"-->
                        <!--android:contentDescription="@string/ballAnim"-->
                        <!--android:src="@drawable/ball" />-->
                <!--</FrameLayout>-->

            </LinearLayout>

            <!--<FrameLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="37dp"-->
                <!--android:layout_marginTop="-37dp">-->

                <!--<ImageView-->
                    <!--android:id="@+id/BounceLine"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="1dp"-->
                    <!--android:adjustViewBounds="false"-->
                    <!--android:scaleType="fitXY"-->
                    <!--android:src="@drawable/pixel" />-->

            <!--</FrameLayout>-->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="-20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="top|start"
                    android:text="@string/date_content"
                    android:textColor="#FFFFFF"
                    android:textSize="35sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/Ending"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:gravity="top|start"
                    android:text="@string/ending"
                    android:textColor="#FFFFFF"
                    android:textSize="35sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/Month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="top|start"
                    android:text="@string/month"
                    android:textColor="#FFFFFF"
                    android:textSize="35sp"
                    android:textStyle="normal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="40dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/CurTemperature"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:gravity="top|start"
                            android:text="@string/curtemp_content"
                            android:textColor="#FFFFFF"
                            android:textSize="50sp"
                            android:textStyle="normal" />

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:id="@+id/WeatherIcon"
                                android:layout_width="64dp"
                                android:layout_height="64dp"
                                android:layout_gravity="center_horizontal"
                                android:adjustViewBounds="true"
                                android:contentDescription="@string/weatherIcon"
                                android:maxHeight="128dp"
                                android:maxWidth="128dp"
                                android:scaleType="fitCenter"
                                android:src="@drawable/clear_day" />

                        </FrameLayout>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/Temperature"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top|start"
                        android:text="@string/temp_content"
                        android:textColor="#FFFFFF"
                        android:textSize="35sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/WordOfDay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:gravity="top|start"
                        android:text="@string/WoD"
                        android:textColor="#FFFFFF"
                        android:textSize="35sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/Definition"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top|start"
                        android:text="@string/WoDdef"
                        android:textColor="#FFFFFF"
                        android:textSize="25sp"
                        android:textStyle="normal" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:adjustViewBounds="false"
                    android:contentDescription="@string/pixel"
                    android:scaleType="fitXY"
                    android:src="@drawable/pixel" />

                <LinearLayout
                    android:id="@+id/NewsBracket"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/NewsHeading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top|start"
                        android:text="@string/NewsHeading"
                        android:textColor="#FFFFFF"
                        android:textSize="35sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/NewsSummary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top|start"
                        android:text="@string/NewsSummary"
                        android:textColor="#FFFFFF"
                        android:textSize="25sp"
                        android:textStyle="normal" />

                </LinearLayout>

            </LinearLayout>

            <!--<TextView-->
            <!--android:id="@+id/TextView01"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="20dp"-->
            <!--android:gravity="top|start"-->
            <!--android:keepScreenOn="true"-->
            <!--android:text="@string/Reminders"-->
            <!--android:textColor="#FFFFFF"-->
            <!--android:textSize="35sp"-->
            <!--android:textStyle="normal" />-->

            <!--<TextView-->
            <!--android:id="@+id/Calendar"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:gravity="top|start"-->
            <!--android:keepScreenOn="true"-->
            <!--android:text="@string/Calendar"-->
            <!--android:textColor="#FFFFFF"-->
            <!--android:textSize="25sp"-->
            <!--android:textStyle="normal" />-->

        </LinearLayout>

        <FrameLayout
            android:id="@+id/overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FF000000"
            android:alpha="0">
        </FrameLayout>

    </FrameLayout>

</FrameLayout>
